<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hackingbuzz.loginapp.MainActivity">

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/facebook"
        android:onClick="performFacebookLogin"
        android:background="@color/facebook"
        />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/twitter"
        android:onClick="performTwitterLogin"
        android:background="@color/twitter"
        />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/google"
        android:onClick="performGoogleLogin"
        android:background="@color/google"
     />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/instagram"
        android:onClick="performInstagramLogin"
        android:background="@color/instagram"
     />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/linkedin"
        android:onClick="performLinkdinLogin"
        android:background="@color/linkdin"
         />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/yahoo"
        android:onClick="performYahooLogin"
        android:background="@color/yahoo"
       />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/windowsLive"
        android:onClick="performWindowsLogin"
        android:background="@color/windows"
       />

    <Button
        style="@style/SocialLoginButtonStyle"
        android:text="@string/github"
        android:onClick="performGithubLogin"
        android:background="@color/github"
        />





</LinearLayout>
